--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
 Test
-
+<body>
+  <center>
+    <i>Tyler's Website</i>
+    
+   <img src="https://raw.githubusercontent.com/WVCS/index-Tylerthebest07/main/Untitled%20drawing.png">
 
 
 
