--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
-Test
+<head>
+  <title> The best website</title>
+  </head>
 <body>
   <center>
-    <i>Tyler's Website</i>
+    <h2><i>Tyler's Website</i></h2>
     
    <img src="https://raw.githubusercontent.com/WVCS/index-Tylerthebest07/main/Untitled%20drawing.png">
 </html>
