Added Style to same page

--- a/index.html
+++ b/index.html
@@ -8,3 +8,27 @@
     
    <img src="https://raw.githubusercontent.com/WVCS/index-Tylerthebest07/main/Untitled%20drawing.png">
 </html>
+
+  
+  <style> 
+    h1{
+  color:Purple;
+    font-style: italic;
+   font-size: 150%;
+}
+Body{
+  background-color:Grey;
+
+}
+img{
+  height:200px;
+   border: 4px dotted blue;
+  rotate: 30deg;
+
+}
+body:hover{
+  background-color:green;
+}
+
+  font-style: italic;
+  </style>
