--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <title> The best website</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon"type="image/x-icon"href="https://github.com/WVCS/index-Tylerthebest07/blob/main/images__1_-removebg-preview%20(5).png">
   </head>
 <body>
   <center>
