--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <h2><i>Tyler's Website</i></h2>
     
    <img src="https://raw.githubusercontent.com/WVCS/index-Tylerthebest07/main/Untitled%20drawing.png">
+  </center>
+   <nav> 
+      <li class="navClass"><a href="index.html"> HOME </a></li>
+      <li class="navClass"><a href="noun.html"> NOUN </a></li>
 </html>
 
   
