Realign Title and Nav

--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon"type="image/x-icon"href="https://github.com/WVCS/index-Tylerthebest07/blob/main/images__1_-removebg-preview%20(5).png">
   </head>
-<body>
-  <center>
+<body> 
+   <nav> 
+      <li class="navClass"><a href="index.html"> HOME </a></li>
+      <li class="navClass"><a href="noun.html"> NOUN </a></li>
+     <center>
     <h2><i>Tyler's Website</i></h2>
     
    <img src="https://raw.githubusercontent.com/WVCS/index-Tylerthebest07/main/Untitled%20drawing.png">
   </center>
-   <nav> 
-      <li class="navClass"><a href="index.html"> HOME </a></li>
-      <li class="navClass"><a href="noun.html"> NOUN </a></li>
+     </body>
 </html>
 
   
