--- a/noun.html
+++ b/noun.html
@@ -15,7 +15,7 @@
   <nav> 
       <li class="navClass"><a href="#top"> TOP </a></li>
       <li class="navClass"><a href="#bottom"> BOTTOM </a></li>
-      <li class="navClass"><a href="https://www.powayusd.com/en-us/schools/hs/wvhs/Calendars/Schedules/Bell-Schedule"> HOME </a></li>
+      <li class="navClass"><a href="index.html">HOME</a></li>
       </nav>
  
   <center>
