--- a/noun.html
+++ b/noun.html
@@ -21,7 +21,7 @@
   <center>
        <h2><i>Tyler's Noun Projet"Happiness"</i></h2>   
   </center>
-    <img src="https://o.remove.bg/downloads/eae2126b-268a-4acc-a6a9-8a3f174be6a4/images-removebg-preview.png"
+    <img src="https://raw.githubusercontent.com/WVCS/index-Tylerthebest07/main/download-removebg-preview%20(1).png"
        
       
 
