--- a/noun.html
+++ b/noun.html
@@ -21,7 +21,7 @@
   <center>
        <h2><i>Tyler's Noun Projet"Happiness"</i></h2>   
   </center>
-    <img src="https://raw.githubusercontent.com/WVCS/index-Tylerthebest07/main/download-removebg-preview%20(1).png"
+    <img src="https://raw.githubusercontent.com/WVCS/index-Tylerthebest07/main/1f615-removebg-preview.png"
        
       
 
