added .html at the end

--- a/Convice/Soviet Union.html
+++ b/Convice/Soviet Union.html
@@ -37,8 +37,8 @@ nav {
   display: inline;
   float: right;
   padding: 10px;
-  postion: sticky;
-  postion: -webkit-sticky;
+  position: sticky;
+  position: -webkit-sticky;
 }
 
 a {
@@ -75,8 +75,14 @@ h4 {
 #prop {
   width:200px;
 }
+
   </style>
 <body>
+  <nav> 
+    <li class="navClass"><a href="index.html"> HOME </a></li>
+    <li class="navClass"><a href="noun.html"> NOUN </a></li>
+    <li class="navClass"><a href="convince/soviet unnion.html"> Soviet Union </a></li>
+ </nav>
   <center>
       <title>Document</title>
     
