--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
    <nav> 
       <li class="navClass"><a href="index.html"> HOME </a></li>
       <li class="navClass"><a href="noun.html"> NOUN </a></li>
-      <li class="navClass"><a href="convince/soviet unnion.html"> NOUN </a></li>
+      <li class="navClass"><a href="convince/soviet unnion.html"> Soviet Union </a></li>
+   </nav>
      <center>
     <h2><i>Tyler's Website</i></h2>
     
