Added code from codepen

--- a/Food/food.html
+++ b/Food/food.html
@@ -1,1 +1,68 @@
+<html>
+  <body>
+  <div class="wrapper">
+    <div class="Nav"> <nav> 
+      <li class="navClass"><a href="#top"> TOP </a></li>
+      <li class="navClass"><a href="#bottom"> BOTTOM </a></li>
+      <li class="navClass"><a href="index.html">HOME</a></li>
+  </nav>
+      <center><h2>Los Pollos Hermans</h2></center>
+  </div>
+  <div class="Menu"> <center> <img 
+                        src="https://image.zmenu.com/menupic/5344963/a6b96b6c-84ed-4764-962e-ae5a746dba13.jpg" width="800vh" height="900vh">
+        <img src="https://image.zmenu.com/menupic/5344963/330334c4-abe0-4733-a4df-9889a7a1a0e9.jpg"width="800vh" height="900vh"></div>
+  <div class="Logo">  <center> 
+    <img src="https://upload.wikimedia.org/wikipedia/en/a/ae/Los_Pollos_Hermanos_logo.png" width="200vh" height="200vh">
+   <br>
+    <br>
+ 
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSPYpUtNvAyICcVU9LYq57FPFCsgcQ0I1_RCSufcs1oyYlvLORqkgBiTyCfnIgJgWm96ss:https://i.ytimg.com/vi/B9RgougnhiE/maxresdefault.jpg&usqp=CAU" width="200vh" height="150vh">
+   <br>
+     
+     <br>
+    
+     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTF4DqVVuLMTyz-skqjuY4Yns9IHyY2csEdFp1nMbNQjcPt0AJpJ0BE-KwMZdmecXr1ZjI:https://media.timeout.com/images/105541804/750/422/image.jpg&usqp=CAU" width="200vh" height="150vh">
+    </center>
+  </div>
+  <div class="Time"> <table style="width:400px">
+    <center>
+   <style>table, th, td {
+  border: 4px solid Black;
+  border-collapse: collapse;
+}
+     tr:nth-child(even) {
+  background-color: #F5AC72;
+}
+    th, td {
+  padding: 10px;
+}</style> <i><h4>HOURS</h4></i>
+  <tr>
 
+    <th>Monday-Thursday</th>
+    <th>Friday</th>
+    <th>Saturday-Sunday</th>
+    </tr>
+  <tr>
+    <td>Open-11:00am</td>
+    <td>Open-12:00am</td>
+    <td> Open-11:00am </td>
+  </tr>
+  <tr>
+    <td>Happy Hour</td>
+    <td>Triva</td>
+    <td>Karaoke</td>
+  </tr>
+  <tr>
+    <td>Closed-6:00pm</td>
+    <td>Closed-10:00pm</td>
+    <td>Closed-11:00pm</td>
+  </tr>
+</table></div>
+        </center>
+ 
+</div>
+  </body>
+    <footer id="bottom">
+    </footer>
+    </html>
+  
