--- a/Food/food.html
+++ b/Food/food.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
   <body>
   <div class="wrapper">
     <div class="Nav"> <nav> 
