--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <li class="navClass"><a href="index.html"> HOME </a></li>
       <li class="navClass"><a href="noun.html"> NOUN </a></li>
       <li class="navClass"><a href="Convice/sovietunion.html"> Soviet Union </a></li>
-     <li class="navClass"><a href="food.html"> FOOD </a></li>
+     <li class="navClass"><a href="Food/food.html"> FOOD </a></li>
    </nav>
      <center>
     <h2><i>Tyler's Website</i></h2>
