--- a/event.html
+++ b/event.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title> COMI-CON(The PLACE FOR COMMUNIST)</title>
+    <link rel="stylesheet" type="text/css" href="event.css">
   </head>
   <body>
   <div class="wrapper">
