--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <li class="navClass"><a href="noun.html"> NOUN </a></li>
       <li class="navClass"><a href="Convice/sovietunion.html"> Soviet Union </a></li>
      <li class="navClass"><a href="Food/food.html"> FOOD </a></li>
+      <li class="navClass"><a href="event.html"> EVENT </a></li>
    </nav>
      <center>
     <h2><i>Tyler's Website</i></h2>
