--- a/event.html
+++ b/event.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title> COMI-CON(The PLACE FOR COMMUNIST)</title>
+    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/WVCS/index-Tylerthebest07/main/Untitled-1.png">
     <link rel="stylesheet" type="text/css" href="event.css">
   </head>
   <body>
