--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <li class="navClass"><a href="Convice/sovietunion.html"> Soviet Union </a></li>
      <li class="navClass"><a href="Food/food.html"> FOOD </a></li>
       <li class="navClass"><a href="event.html"> EVENT </a></li>
+     li class="navClass"><a href="final.html"> FINAL </a></li>
    </nav>
      <center>
     <h2><i>Tyler's Website</i></h2>
