--- a/final.html
+++ b/final.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <title> COMI-CON(The PLACE FOR COMMUNIST)</title>
+    <title> High Flying INC</title>
+     <link rel="stylesheet" type="text/css" href="final.css">
   </head>
   <body>
   <div class="wrapper">
