--- a/spurs.html
+++ b/spurs.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title> Tottenham Hotspurs</title>
-     <link rel="stylesheet" type="text/css" href="final.css">
+     <link rel="stylesheet" type="text/css" href="spurs.css">
   </head>
   <body>
   <div class="wrapper" id="wrapper">
