--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <li class="navClass"><a href="event.html"> EVENT </a></li>
      <li class="navClass"><a href="final.html"> FINAL </a></li>
           <li class="navClass"><a href="spurs.html"> TEAM </a></li>
+      <li class="navClass"><a href="Amusement/amuse.html"> Amusement </a></li>
    </nav>
      <center>
     <h2><i>Tyler's Website</i></h2>
