--- a/Amusement/amuse.html
+++ b/Amusement/amuse.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title> Sadness Land</title>
-     <link rel="stylesheet" type="text/css" href="final.css">
+     <link rel="stylesheet" type="text/css" href="amuse.css">
   </head>
   <body>
   <div class="wrapper" id="wrapper">
