--- a/Amusement/amuse.html
+++ b/Amusement/amuse.html
@@ -132,4 +132,48 @@ id="topbut">TOP </buttom>
     <footer id="bottom">
     </footer>
     </html>
+    <script>
+      let slideIndex = 1;
+showSlides(slideIndex);
+
+// Next/previous controls
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+// Thumbnail image controls
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  let i;
+  let slides = document.getElementsByClassName("mySlides");
+  let dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";
+  }
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";
+  dots[slideIndex-1].className += " active";
+}
+
+
+window.onscroll=function(){hideFunction()};
+
+function hideFunction(){
+  if(document.body.scrollTop> 120 || document.documentElement.scrollTop > 90 ) document.getElementById("topbut").style.display="block";
+  else{
+    document.getElementById("topbut").style.display="none";
+  }
+}
+function topFunction (){
+  document.body.scrollTop=0;
+  document.documentElement.scrollTop=0;
+}
+    </script>
   
