--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
      <li class="navClass"><a href="final.html"> FINAL </a></li>
           <li class="navClass"><a href="spurs.html"> TEAM </a></li>
       <li class="navClass"><a href="Amusement/amuse.html"> AMUSEMENT </a></li>
+      <li class="navClass"><a href="diet.html"> BRAND </a></li>
    </nav>
      <center>
     <h2><i>Tyler's Website</i></h2>
