--- a/noun.html
+++ b/noun.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title> Happiness</title>
-     <link rel="stylesheet" type="text/css" href="final.css">
+     <link rel="stylesheet" type="text/css" href="noun.css">
   </head>
   <body>
     
