--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <body>
     
   <div class="wrapper" id="wrapper">
-    <div class="Nav"> <nav> 
+  
+ 
+      <center><h2>Homepage</h2> 
+         <nav> 
       
      <li class="navClass"><a href="index.html"> HOME </a></li>
       <li class="navClass"><a href="noun.html"> NOUN </a></li>
@@ -18,7 +21,6 @@
       <li class="navClass"><a href="Amusement/amuse.html"> AMUSEMENT </a></li>
       <li class="navClass"><a href="diet.html"> BRAND </a></li>
   </nav>
-      <center><h2>Homepage</h2> 
         <div id="coys">
      <form autocomplete="off">
            <div class="autocomplete" action="https://www.google.com/">
