--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <html>
   <head>
-    <title> Homepage</title>
-     <link rel="stylesheet" type="text/css" href="style.css">
+    <title> Home PAge</title>
+     <link rel="stylesheet" type="text/css" href="final.css">
   </head>
   <body>
     
   <div class="wrapper" id="wrapper">
-  
- 
+    <div class="Nav"> 
       <center><h2>Homepage</h2> 
-         <nav> 
+        <nav> 
       
      <li class="navClass"><a href="index.html"> HOME </a></li>
       <li class="navClass"><a href="noun.html"> NOUN </a></li>
@@ -145,6 +144,7 @@ id="topbut">TOP </buttom>
     <footer id="bottom">
     </footer>
     </html>
+  
 <script>
   <html>
   <head>
